<resources>
    <string name="app_name">Accomplish-to-do-app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retype_password">Retype Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here!</string>
    <string name="register_here">Register Here</string>
    <string name="login">Login</string>
    <string name="add_new_todo">Add new todo</string>
    <string name="add">Add</string>
</resources>