<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegisterFragment">


    <EditText
        android:id="@+id/txtRegister_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtRegister_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/txtRegister_email"
        app:layout_constraintStart_toStartOf="@+id/txtRegister_email"
        app:layout_constraintTop_toBottomOf="@+id/txtRegister_email" />

    <EditText
        android:id="@+id/txtRegister_reTypePass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/txtRegister_password"
        app:layout_constraintStart_toStartOf="@+id/txtRegister_password"
        app:layout_constraintTop_toBottomOf="@+id/txtRegister_password" />

    <Button
        android:id="@+id/btnRegister_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="@+id/txtRegister_reTypePass"
        app:layout_constraintTop_toBottomOf="@+id/txtRegister_reTypePass" />

    <TextView
        android:id="@+id/txtRegister_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/already_have_an_account_sign_in_here"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="@+id/txtRegister_reTypePass"
        app:layout_constraintStart_toStartOf="@+id/txtRegister_reTypePass"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister_signUp" />
</androidx.constraintlayout.widget.ConstraintLayout>